= Changelog
:toc:

== v0.23.0: Feature Updates

As the releases before, this release has 100% test coverage.
Tested with Go 1.14 and Go 1.15.

=== Feature Updates

* Introduce `Float64Optional` and `Float64VarOptional` to have complete method parity for String, Int and Float64 types.

* Support multi-line command descriptions.

* Add `GetEnv` support for missing single option types:
	- Int, IntVar, IntOptional, IntVarOptional
  - StringOptional, StringVarOptional
  - Float64, Float64Var, Float64Optional, Float64VarOptional

== v0.22.0: Breaking Change

As the releases before, this release has 100% test coverage.
Tested with Go 1.14 and Go 1.15.

=== Bug fix

Fix completion issues where a completion that works when starting to complete from scratch fails when some args are deleted.

Fixed by changing the exit status when generating completions from 1 to 124.
link:https://www.gnu.org/software/bash/manual/html_node/Programmable-Completion.html[Exit 124] means programmable completion restarts from the beginning, with an attempt to find a new compspec for that command.

=== Feature Removal

Removing negatable flags `NBool` and `NBoolVar`.
A feature that adds a bunch of complexity for very little value and prevents reading environment variables into booleans.

=== New Features

* `opt.GetEnv` Is now supported when using `opt.Bool` and `opt.BoolVar`.
Previously only `opt.String` and `opt.StringVar` were supported.
+
When using `opt.GetEnv` with `opt.Bool` or `opt.BoolVar`, only the words "true" or "false" are valid.
They can be provided in any casing, for example: "true", "True" or "TRUE".

* `opt.Dispatch` now automatically handles the help flag.
The help flag needs to be defined at the top level.
When the help flag is called and handled by a command `opt.Dispatch` now returns an error of type `getoptions.ErrorHelpCalled`.
+
For example:
+
[source,go]
----
func main() {
	os.Exit(program())
}

func program() int {
	opt := getoptions.New()